Correcciones en el controller de colecciones